# lab10_miguel_logan

./: .gitmodules  CMakeLists.txt  README.md  simulate_withexit.resc
.github/workflows/: main.yml
gdb/: #gdb_init_script.gdb#  #setup_debug_rp2040.sh#  startup_debugger_connection
include/: my_addition.h
src/: #blink.c#  CMakeLists.txt  blink.c  blink_act1.c  hello_dormant.c  hello_sleep_alarm.c  my_addition.c
test/: CMakeLists.txt  test.c  test_my_addition.c
